fix android layout bug

--- a/packages/@coorpacademy-components/src/organism/mooc-header/style.css
+++ b/packages/@coorpacademy-components/src/organism/mooc-header/style.css
@@ -502,6 +502,7 @@
 
   .homeMenu {
     display: block;
+    flex-shrink: 0;
   }
 
   .homeLink {
